--- a/style.css
+++ b/style.css
@@ -1,8 +1,35 @@
-html {
-  height: 100%;
+.home {
+  background-color: #252525;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   width: 100%;
 }
 
-body {
-  font-family: Arial, sans-serif;
+.home .div {
+  background-color: var(--background);
+  width: 1920px;
+  height: 1080px;
+  position: relative;
+}
+
+.home .text-wrapper {
+  position: absolute;
+  top: 59px;
+  left: 30px;
+  font-family: "Inter-Regular", Helvetica;
+  font-weight: 400;
+  color: #ffffff;
+  font-size: 64px;
+  letter-spacing: 0;
+  line-height: normal;
+}
+
+.home .rectangle {
+  position: absolute;
+  width: 1920px;
+  height: 100px;
+  top: 137px;
+  left: 0;
+  background-color: var(--secondary);
 }
